fixed mozzila scrollbar bug

--- a/style.scss
+++ b/style.scss
@@ -191,6 +191,12 @@ body {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
+#scrollbar {
+  overflow-y: scroll;
+  scrollbar-color: #FFFFFF rgba(0, 0, 0, 0.3);
+  scrollbar-width: thin;
+}
+
 
 .logo {
   color: #FFFFFF;
